--- a/TrackingKapal/project.properties
+++ b/TrackingKapal/project.properties
@@ -12,4 +12,5 @@
 
 # Project target.
 target=android-10
-android.library.reference.1=../appcompat
+android.library.reference.1=..\\appcompat
+android.library.reference.2=../google-play-services_lib
