--- a/TrackingKapal/AndroidManifest.xml
+++ b/TrackingKapal/AndroidManifest.xml
@@ -63,6 +63,11 @@
             android:configChanges="keyboardHidden|orientation"
             android:windowSoftInputMode="stateHidden">
         </activity>
+        <service android:name="com.tracking.kapal.service.GetLocationService" android:enabled="true">
+            <intent-filter android:label="@string/app_name" >
+                <action android:name="com.tracking.kapal.service.GetLocationService"/>
+            </intent-filter>
+        </service>
         
         <!-- Goolge API Key -->
         <meta-data
