--- a/TrackingKapal/AndroidManifest.xml
+++ b/TrackingKapal/AndroidManifest.xml
@@ -52,6 +52,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="com.tracking.kapal.activity.ConnectionErrorActivity"
+            android:label="@string/app_name" 
+            android:configChanges="keyboardHidden|orientation"
+            android:windowSoftInputMode="stateHidden">
+        </activity>
         <activity android:name="com.tracking.kapal.activity.LoginActivity"
             android:label="@string/app_name" 
             android:configChanges="keyboardHidden|orientation"
