--- a/TrackingKapal/AndroidManifest.xml
+++ b/TrackingKapal/AndroidManifest.xml
@@ -57,6 +57,11 @@
             android:configChanges="keyboardHidden|orientation"
             android:windowSoftInputMode="stateHidden">
         </activity>
+        <activity android:name="com.tracking.kapal.activity.EmptyActivity"
+            android:label="@string/app_name" 
+            android:configChanges="keyboardHidden|orientation"
+            android:windowSoftInputMode="stateHidden">
+        </activity>
         <activity android:name="com.tracking.kapal.activity.LoginActivity"
             android:label="@string/app_name" 
             android:configChanges="keyboardHidden|orientation"
