--- a/TrackingKapal/AndroidManifest.xml
+++ b/TrackingKapal/AndroidManifest.xml
@@ -6,10 +6,14 @@
     android:screenOrientation="portrait" >
     
     <permission
-        android:name="info.androidhive.googlemapsv2.permission.MAPS_RECEIVE"
+        android:name="com.tracking.kapal.permission.MAPS_RECEIVE"
         android:protectionLevel="signature" />
- 
-    <uses-permission android:name="info.androidhive.googlemapsv2.permission.MAPS_RECEIVE" />
+    <!-- <permission
+        android:name="info.androidhive.googlemapsv2.permission.MAPS_RECEIVE"
+        android:protectionLevel="signature" /> -->
+        
+    <!-- <uses-permission android:name="info.androidhive.googlemapsv2.permission.MAPS_RECEIVE" /> -->
+    <uses-permission android:name="com.tracking.kapal.permission.MAPS_RECEIVE" />
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
     
     <!-- Required to show current location -->
@@ -34,7 +38,7 @@
 
     <uses-sdk
         android:minSdkVersion="9"
-        android:targetSdkVersion="9" />
+        android:targetSdkVersion="17" />
 
     <application
         android:allowBackup="true"
