--- a/TrackingKapal/AndroidManifest.xml
+++ b/TrackingKapal/AndroidManifest.xml
@@ -77,6 +77,18 @@
             android:configChanges="keyboardHidden|orientation"
             android:windowSoftInputMode="stateHidden">
         </activity>
+        <activity android:name="com.tracking.kapal.activity.JadwalListActivity"
+            android:theme="@style/app_theme_with_action_bar"
+            android:label="@string/app_name" 
+            android:configChanges="keyboardHidden|orientation"
+            android:windowSoftInputMode="stateHidden">
+        </activity>
+        <activity android:name="com.tracking.kapal.activity.CurrentScheduleActivity"
+            android:theme="@style/app_theme_with_action_bar"
+            android:label="@string/app_name" 
+            android:configChanges="keyboardHidden|orientation"
+            android:windowSoftInputMode="stateHidden">
+        </activity>
         <service android:name="com.tracking.kapal.service.GetLocationService" android:enabled="true">
             <intent-filter android:label="@string/app_name" >
                 <action android:name="com.tracking.kapal.service.GetLocationService"/>
